# wkRealTime

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  resource.rc.in
.github/workflows/: msbuild.yml
bundle/: wkRealTime.ini
bundle/User/Schemes/: Boom Race [Realtime].wsc  Bungee Race [Realtime].wsc  Jetpack Race (Normal Jetpack Speed) [Realtime].wsc  Parachute Race (Random Wind) [Realtime].wsc  Parachute Race (Windless) [Realtime].wsc  Rope Race [Realtime].wsc  Walk Race (Weapons & Mines) [Realtime].wsc  Walk Race [Realtime].wsc
cmake/: git.cc.in  git.h  git_watcher.cmake  version.h.in
include/: Base64.h
include/polyhook2/Detour/: ADetour.hpp
lib/: Zycore.lib  Zydis.lib  asmjit.lib  capstone.lib  libz-static.lib
lib/hacklib/: ExeFile.cpp  ExeFile.h  ExeFile_WIN32.cpp  Handles.h  Memory.h  Memory_WIN32.cpp  PatternScanner.cpp  PatternScanner.h
src/: Camera.cpp  Camera.h  Chat.cpp  Chat.h  Config.cpp  Config.h  Constants.h  Debugf.h  DevConsole.cpp  DevConsole.h  Drawing.cpp  Drawing.h  Frontend.cpp  Frontend.h  GameNet.cpp  GameNet.h  Hooks.cpp  Hooks.h  LobbyChat.cpp  LobbyChat.h  LobbyPackets.cpp  LobbyPackets.h  LobbyProtocol.cpp  LobbyProtocol.h  RealTime.cpp  RealTime.h  TaskMessageFifo.cpp  TaskMessageFifo.h  Utils.cpp  Utils.h  W2App.cpp  W2App.h  WaLibc.cpp  WaLibc.h  WeaponPanel.cpp  WeaponPanel.h  dllmain.cpp
src/entities/: CGameTask.h  CList.h  CTask.h  CTaskTeam.cpp  CTaskTeam.h  CTaskTurnGame.cpp  CTaskTurnGame.h  CTaskWorm.cpp  CTaskWorm.h
